[package]
name = "pony"
version = "0.2.5"
edition = "2021"
build = "build.rs" 

[profile.release]
strip = true 
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
strip = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde", "rkyv"] }
config = "0.14"
console-subscriber = {version = "0.4", optional = true} 
clickhouse = { version = "0.13.0" }
clap = { version = "4.4", features = ["derive"] }
defguard_wireguard_rs = {version = "0.7.2", features=["serde"]}
default-net = "0.22"
fern = "0.7"
futures = "0.3"
hex = "0.4"
ipnet = { version = "2", features=["serde"] }
log = "0.4"
netstat2 = { version = "0.11.1" } 
openssl = { version = "0.10", features = ["vendored"] }
prost = { version = "0.13" }
prost-derive = { version = "0.13" }
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
rkyv = { version = "0.7", features = ["std", "alloc", "validation", "uuid", ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sysinfo = { version = "0.33"}
time = "0.3"
thiserror = "2.0"
tonic = { version = "0.12" }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features=["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"]}
postgres-types = { version = "0.2", features = ["derive"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"]  }
urlencoding = "2.1.3"
qrcode = "0.14"
zmq = "0.10"
warp = "0.3"
x25519-dalek =  { version = "2", features = ["static_secrets"] }


[build-dependencies]
tonic-build = "0.12"
walkdir = "2.0"

[dev-dependencies]
tracing = "0.1" 
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] } 
tokio-util = "0.7"

[features]

default = []
debug = ["console-subscriber"]

[[bin]]
name = "agent"
path = "src/bin/agent/main.rs"

[[bin]]
name = "api"
path = "src/bin/api/main.rs"

[[bin]]
name = "auth"
path = "src/bin/auth/main.rs"

[[bin]]
name = "utils"
path = "src/bin/utils.rs"


