[package]
name = "fcore"
version = "0.5.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
strip = true

[dependencies]
async-trait = "0.1"
base64 = "0.22"
base32 = "0.5.1"
chrono = { version = "0.4", features = ["serde", "rkyv"] }
console-subscriber = {version = "0.4", optional = true}
dashmap = "6.1.0"
defguard_wireguard_rs = {version = "0.7.2", features=["serde"], optional = true}
futures = "0.3"
hex = { version = "0.4",  optional = true}
hmac = "0.12"
openssl = { version = "0.10", features = ["vendored"] }
prost = { version = "0.13", optional = true }
prost-derive = { version = "0.13", optional = true }
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rkyv = { version = "0.7", features = ["std", "alloc", "validation", "uuid", ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_yaml = "0.9"
sysinfo = { version = "0.33"}
thiserror = "2.0"
tonic = { version = "0.12", optional = true }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version="0.7", features=["with-uuid-1", "with-chrono-0_4", "with-serde_json-1"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
postgres-types = { version = "0.2", features = ["derive"]}
url = "2"
uuid = { version = "1", features = ["serde", "v4"]  }
urlencoding = "2.1.3"
qrcode = "0.14"
x25519-dalek =  { version = "2", features = ["static_secrets"] }
warp = {version = "0.3"}
zmq = "0.10"
parking_lot = "0.12.5"
sha2 = "0.10"
data-encoding = "2.5"
lettre = { version = "0.11", features = ["tokio1", "builder", "smtp-transport", "tokio1-native-tls"], optional = true}

[build-dependencies]
tonic-build = {version = "0.12", optional = true}
walkdir = "2.0"

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
console-subscriber = { version = "0.4" }
tokio-util = "0.7"

[features]
default = []
debug = ["console-subscriber"]
wireguard = ["defguard_wireguard_rs"]
xray = ["prost", "prost-derive", "tonic", "tonic-build"]
email = ["lettre", "hex"]

[[bin]]
name = "node"
path = "src/bin/node/main.rs"

[[bin]]
name = "api"
path = "src/bin/api/main.rs"

[[bin]]
name = "auth"
path = "src/bin/auth/main.rs"

